Add test. Using JSON path